Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-2217
fix notablescan
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.7.4
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Aaron Staple (Inactive)
Reporter:
Aaron Staple (Inactive)
Participants:
Aaron Staple
,
auto
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
Dec 14 2010 07:58:20 AM UTC
Updated:
Jul 12 2016 12:20:10 AM UTC
Resolved:
Dec 14 2010 07:33:01 PM UTC
PagerDuty