SERVER-2217 fix parsing of notablescan command line option